# Upside-Down-RL-Transformer

./: LICENSE  Makefile  README.md  jobscript-antmaze.sh  jobscript-gpu.sh  jobscript.sh  pyproject.toml  setup.cfg  slurm-15756969.out  slurm-15757041.out  slurm-15757328.out  slurm-15777211.out  slurm-15836729.out  slurm-16625850.out  slurm-16626057.out  slurm-16627216.out  slurm-16704948.out  slurm-16738190.out  slurm-16738195.out  slurm-16738212.out  slurm-16761304.out  slurm-16762345.out  slurm-16778574.out  slurm-16990051.out  slurm-16990210.out  slurm-17048631.out  slurm-17104149.out  slurm-17104185.out  slurm-17104220.out  slurm-17231056.out  slurm-17235255.out  slurm-17241900.out  slurm-17248504.out  slurm-17288301.out  slurm-17291960.out  slurm-17293152(big).out  slurm-17311682.out  slurm-17591963.out  slurm-17595770.out  slurm-17600154.out  (+56 more)
Decision_Transformer/: experiment.py
docs/: conf.py  index.rst  mkdocs.yml  modules.rst
jobscripts/: jobscript-antmaze.sh  jobscript-gpu.sh
lukasz_sawala_bsc_thesis/: .FILE_EXPLANATIONS.md  0reward_testing.py  0rewardtesting.py  UDRLt_MLP_finetuning_maze.py  alpha_beta_plotting.py  antmaze_model-tiny-hugemlp.pth  antmaze_tiny_10layers.pth  attention_mapping_DT.py  attention_mapping_UDRLt.py  dataset_generation.py  dt_training.py  finetunedbroski.pth  finetuningExtraDataAntmaze.py  finetuningNN_maze.py  finetuningUDRLt_MLP_maze.py  ft-selfimprove-rollout-lastcondition-NN.py  ft-selfimprove-rollout-lastcondition.py  ft_selfimprove_rollout_lastcondition_NN.py  grid_UDRLT_MLP_training.py  grid_UDRLT_training-CLS.py  grid_UDRLT_training.py  grid_UDRLT_training_OPTIMIZED.py  grid_dt_training.py  grid_nn_training.py  grid_search_nn_training.py  k_means_rewards.py  main.py  model_evaluation-ALL.py  model_evaluation-CLS.py  model_evaluation.py  model_evaluation_ALL.py  model_evaluation_c2.py  models.py  new-berttiny-bigmlp.pth  new-berttiny-enormousmlp.pth  new-berttiny.pth  skewed_sampling_test.py  test.py  transfer_eval-condition1-UNTRAINED.py  transfer_eval-main.py  (+8 more)
models/: bert_tiny.pth  best_nn_grid.pth  mlpbert_t_hugemlp-batch32.pth  mlpbert_t_hugemlp.pth  supaugmented_frozen_berttiny_encoder_actionhead.pth
notebooks/: best_nn.pth  data_prep_and_analysis.ipynb  dataset_generation.ipynb  dataset_merging.ipynb  decision_transformer_training.ipynb  evaluation.py  models.py  (+9 more)
(+49 files in other folders)
