[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lukasz_sawala_bsc_thesis"
version = "0.0.1"
description = "Bachelor Thesis on the topic of Decision Making Transformers via Upside-Down RL"
authors = [
  { name = "Lukasz Sawala" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["lukasz_sawala_bsc_thesis"]
force_sort_within_sections = true
