[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lukasz_sawala_bsc_thesis"
version = "0.0.1"
description = "Bachelor Thesis on the topic of Decision Making Transformers via Upside-Down RL"
authors = [
  { name = "Lukasz Sawala" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.9"
dependencies = [
    "typer>=0.15.1",
    "ipython>=8.32.0",
    "isort>=6.0.0",
    "jupyterlab>=4.3.5",
    "loguru>=0.7.3",
    "lukasz-sawala-bsc-thesis",
    "matplotlib>=3.10.0",
    "mkdocs>=1.6.1",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pip>=25.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "gymnasium[robotics]>=1.0.0",
    "minari[all]>=0.5.2",
    "huggingface-hub>=0.29.1",
    "d4rl>=1.1",
    "h5py>=3.13.0",
    "torch>=2.6.0",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
    "zeus>=0.11.0",
    "captum>=0.7.0",
    "transformers>=4.50.2",
    "uv>=0.7.6",
    "gymnasium-robotics>=1.3.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.1",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["lukasz_sawala_bsc_thesis"]
force_sort_within_sections = true

[tool.uv.sources]
lukasz-sawala-bsc-thesis = { workspace = true }

